@@ -1,3 +1,8 @@
+2006-03-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/Frontpage.pm (renderUserLogin):
+	New config option: $Torrus::Renderer::lostPasswordURL
+
 2006-03-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Renderer/HTML.pm:
